--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,6 @@
         tools:targetApi="31">
         <activity
             android:name=".ActivityLogin"
-            android:exported="false" />
-        <activity
-            android:name=".GymActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,8 +22,17 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".GymActivity"
+            android:exported="false">
+
+        </activity>
+        <activity
             android:name=".YogaActivity"
-            android:exported="false"></activity>
+            android:exported="false">
+
+        </activity>
+
+
     </application>
 
 </manifest>
