--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.FitHub20"
         tools:targetApi="31">
         <activity
+            android:name=".ActivitySignUp"
+            android:exported="false" >
+
+
+        </activity>
+        <activity
             android:name=".ActivityLogin"
             android:exported="true">
             <intent-filter>
@@ -20,19 +26,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".GymActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".YogaActivity"
-            android:exported="false">
-
-        </activity>
-
-
+            android:exported="false"></activity>
     </application>
 
 </manifest>
