--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,27 +13,28 @@
         android:theme="@style/Theme.FitHub20"
         tools:targetApi="31">
         <activity
-            android:name=".ActivitySignUp"
-            android:exported="false" >
-
-
-        </activity>
-        <activity
-            android:name=".ActivityLogin"
-            android:exported="true">
+            android:name=".ActivityWelcome"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ActivitySignUp"
+            android:exported="false"></activity>
+        <activity
+            android:name=".ActivityLogin"
+            android:exported="false">
 
         </activity>
         <activity
             android:name=".GymActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".YogaActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
