--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,20 @@
         android:theme="@style/Theme.FitHub20"
         tools:targetApi="31">
         <activity
+            android:name=".GymSelected"
+            android:exported="false" >
+
+
+        </activity>
+        <activity
             android:name=".ActivityWelcome"
+            android:exported="false">
+
+        </activity>
+        <activity
+            android:name=".ActivitySignUp"
             android:exported="true" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,13 +34,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ActivitySignUp"
-            android:exported="false"></activity>
-        <activity
             android:name=".ActivityLogin"
-            android:exported="false">
-
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".GymActivity"
             android:exported="false" />
