Added bottom nav bar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,20 +25,23 @@
         </activity>
         <activity
             android:name=".ActivitySignUp"
-            android:exported="true" >
+            android:exported="false" >
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".ActivityLogin"
             android:exported="false"></activity>
         <activity
             android:name=".GymActivity"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
         <activity
             android:name=".YogaActivity"
             android:exported="false" />
