--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,34 +13,30 @@
         android:theme="@style/Theme.FitHub20"
         tools:targetApi="31">
         <activity
+            android:name=".YogaSelected"
+            android:exported="false"
+            android:label="@string/title_activity_yoga_selected"
+            android:theme="@style/Theme.FitHub20" />
+        <activity
             android:name=".GymSelected"
-            android:exported="false" >
-
-
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".ActivityWelcome"
-            android:exported="false">
-
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".ActivitySignUp"
-            android:exported="false" >
-
-
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".ActivityLogin"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".GymActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".YogaActivity"
